--- a/skay-bot.css
+++ b/skay-bot.css
@@ -7,7 +7,7 @@
   border: 4px solid var(--main-color);
   border-radius: 20px;
   overflow-y: auto;
-
+  
   position: fixed;
   right: 20px;
   bottom: 20px;
@@ -15,6 +15,7 @@
 
 .botName, .botMessage {
   display: inline-flex;
+  white-space: pre-wrap;
 }
 
 .botName::after {
